welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:3: error: '=' expected but ';' found.
var x:= 0;var y:= 0; do {avance();x = x + 1;}while(estSurBiscuit())
         ^Methods:3: error: '=' expected but ';' found.
var x:= 0;var y:= 0; do {avance();x = x + 1;}while(estSurBiscuit())
                   ^